--- a/1- Slider/src/index.css
+++ b/1- Slider/src/index.css
@@ -5,6 +5,7 @@
   --clr-grey-4: hsl(210, 31%, 80%);
   --clr-grey-5: hsl(209, 34%, 30%);
   --clr-gold: #c59d5f;
+  --clr-white: #fff;
   --clr-primary-1: hsl(21, 62%, 45%);
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   --transition: all 0.3s linear;
@@ -91,7 +92,7 @@ p {
   text-align: center;
   position: relative;
   display: flex;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .person-img {
   border-radius: 50%;
@@ -125,4 +126,50 @@ article h4 {
   justify-content: center;
   align-items: center;
   margin-bottom: 10px; /* Adjust margin as needed */
+}
+.prev,
+.next {
+  position: absolute;
+  top: 200px;
+  transform: translateY(-50%);
+  background: var(--clr-grey-3);
+  color: var(--clr-white);
+  width: 1.25rem;
+  height: 1.25rem;
+  display: grid;
+  place-items: center;
+  border-color: transparent;
+  font-size: 1rem;
+  border-radius: var(--radius);
+  cursor: pointer;
+  transition: var(--transition);
+}
+.prev:hover,
+.next:hover {
+  background: var(--clr-primary-5);
+}
+.prev {
+  left: 0;
+}
+.next {
+  right: 0;
+}
+article {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: var(--transition);
+}
+article.activeSlide {
+  opacity: 1;
+  transform: translateX(0);
+}
+article.lastSlide {
+  transform: translateX(-100%);
+}
+article.nextSlide {
+  transform: translateX(100%);
 }
